画像差し替え

--- a/application_parameter.html
+++ b/application_parameter.html
@@ -308,11 +308,6 @@
 </td></tr></table></div>
 </div></blockquote>
 </li>
-<li><p>AWS Systems Manager パラメータストアの設定方法</p>
-<blockquote>
-<div><a class="reference internal image-reference" href="_images/parameterstore.svg"><img alt="_images/parameterstore.svg" class="align-center" src="_images/parameterstore.svg" /></a>
-</div></blockquote>
-</li>
 <li><p>application.ymlで同様の項目を管理する方法</p>
 <blockquote>
 <div><div class="highlight-yaml notranslate"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre>1
@@ -325,6 +320,22 @@
 </div></blockquote>
 </li>
 </ul>
+</dd>
+</dl>
+</li>
+<li><dl>
+<dt>AWS Systems Manager パラメータストアの設定</dt><dd><ul>
+<li><p>設定例</p>
+<blockquote>
+<div><a class="reference internal image-reference" href="_images/parameterstore.png"><img alt="_images/parameterstore.png" class="align-center" src="_images/parameterstore.png" style="width: 664.0px; height: 104.0px;" /></a>
+</div></blockquote>
+</li>
+</ul>
+<blockquote>
+<div><ul class="simple">
+<li><p>パラメータの名称付与ルール</p></li>
+</ul>
+</div></blockquote>
 </dd>
 </dl>
 </li>
